* 2017.11.08 - added dvdt prof to dump OpenCL stats from ARMCL

* 2017.10.28 - fixing '-fPIC' in ARMCL

* 2017.10.16 - added min boost 1.64.0 for caffe

* 2017.10.14 - improved packages and added stable-channel tag

* 2017.10.09 - added package:lib-armcl-* packages (CPU/OpenCL with master/17.09 version)
             - moved outdated package:lib-acl-* to ck-old-packages repo

* 2017.06.01 - removing patch3 from CLBlast (was added to mainline)

* 2017.05.25 - first version of CLBlast crowd-tuning via CK is now working on Linux, Windows, Android
             - moved CLBLast crowd-tuning to ck-crowdtuning repo

* 2017.05.24 - started working on CLBlast crowd-tuning via CK

* 2017.05.08 - added ARM compute lib package
             - added simple ARM SGEMM benchmark with NEON

* 2017.04.14 - improving handling of OpenBLAS on Windows

* 2017.04.05 - added package:lib-opencv-2.4.13.2 and lib-opencv-3.2.0

* 2017.03.26 - finishing unifying CLBlast autotuning package across Linux, Windows, Android

* 2017.03.16 - fixing boost compilation on Windows with VS2017

* 2017.01.19 - unified installation of ViennaCL (CPU,OpenCL) 
               across Linux, Windows, Android
             - added universal package for CLBlast
             - added ISAAC package
             - removed outdated CLBLAS and added new universal one

* 2017.01.18 - added support for libDNN, moved tiny-dnn here

* 2017.01.17 - added support for compiling ViennaCL (CPU/OpenCL) on Windows

* 2017.01.08 - many fixes to support Caffe deps on Windows, Linux and Android in a unified way

* 2016.12.21 - forcing package installation for libs targetting Android
               (otherwise may auto-detect local versions)

* 2016.12.02 - slightly fixing meta of openBLAS packages (which do not support Android)

* 2016.11.14 - added ViennaCL trunk package (CPU / OpenCL) targeting Android and Linux
             - added clBLAS and clBLAST targetting Android (though problems with native NDK)