@@ -1,1 +1,1 @@
-lib-viennacl-master-src
+lib-viennacl-master-universal-src
