@@ -1,20 +1,20 @@
 {
-  "backup_data_uid": "4c9085233fe0291d", 
-  "backup_module_uid": "1dc07ee0f4742028", 
-  "backup_module_uoa": "package", 
+  "backup_data_uid": "4c9085233fe0291d",
+  "backup_module_uid": "1dc07ee0f4742028",
+  "backup_module_uoa": "package",
   "control": {
-    "author": "cTuning foundation", 
-    "author_email": "admin@cTuning.org", 
-    "author_webpage": "http://cTuning.org", 
-    "copyright": "See CK COPYRIGHT.txt for copyright details", 
-    "engine": "CK", 
-    "iso_datetime": "2016-09-14T09:44:41.079627", 
-    "license": "See CK LICENSE.txt for licensing details", 
+    "author": "cTuning foundation",
+    "author_email": "admin@cTuning.org",
+    "author_webpage": "http://cTuning.org",
+    "copyright": "See CK COPYRIGHT.txt for copyright details",
+    "engine": "CK",
+    "iso_datetime": "2016-09-14T09:44:41.079627",
+    "license": "See CK LICENSE.txt for licensing details",
     "version": [
-      "1", 
-      "8", 
+      "1",
+      "8",
       "1dev"
     ]
-  }, 
+  },
   "data_name": "lib-viennacl-1.7.1-src"
 }
