@@ -1,20 +1,20 @@
 {
-  "backup_data_uid": "4f1e8fde6a81e24b", 
-  "backup_module_uid": "1dc07ee0f4742028", 
-  "backup_module_uoa": "package", 
+  "backup_data_uid": "4f1e8fde6a81e24b",
+  "backup_module_uid": "1dc07ee0f4742028",
+  "backup_module_uoa": "package",
   "control": {
-    "author": "Anton Lokhmotov", 
-    "author_email": "anton@dividiti.com", 
-    "author_webpage": "http://dividiti", 
-    "copyright": "See CK COPYRIGHT.txt for copyright details", 
-    "engine": "CK", 
-    "iso_datetime": "2016-06-17T09:02:00.075178", 
-    "license": "See CK LICENSE.txt for licensing details", 
+    "author": "Anton Lokhmotov",
+    "author_email": "anton@dividiti.com",
+    "author_webpage": "http://dividiti",
+    "copyright": "See CK COPYRIGHT.txt for copyright details",
+    "engine": "CK",
+    "iso_datetime": "2016-06-17T09:02:00.075178",
+    "license": "See CK LICENSE.txt for licensing details",
     "version": [
-      "1", 
-      "7", 
+      "1",
+      "7",
       "2dev"
     ]
-  }, 
+  },
   "data_name": "lib-viennacl-1.7.1"
 }
